--- a/style.css
+++ b/style.css
@@ -21,9 +21,9 @@ body {
 nav {
     display: flex;
     justify-content: space-evenly;
+    width: 100%;
     align-items: center;
     padding: 1rem 0.2rem;
-    width: 100%;
     background-color: rgb(50, 116, 124);
     position: fixed;
 }
@@ -33,7 +33,7 @@ nav a {
     align-items: center;
     font-size: 0.8rem;
     text-decoration: none;
-    text-wrap: nowrap; 
+    /* text-wrap: nowrap;  */
     margin: 0 0.4rem;
     color: rgb(148, 218, 208);
     animation: fadeIn3 2.5s;
@@ -60,6 +60,7 @@ address a {
     justify-content: flex-end;
     align-items: center;
     padding: 4rem 0.5rem 0.5rem;    
+
 }
 
 .socialBanner a {
@@ -124,12 +125,16 @@ footer i {
 
 /* BREAKPOINT: For tablet view */
 @media only screen and (min-width: 600px) and (max-width: 1024px) {
+    section, section > *, section h1, section h3 {
+        max-width: 90vw;
+    }   
+    
     nav a {
         font-size: 1.25rem;
     }
 
     nav a i.material-symbols-outlined {
-        font-size: 3rem;
+        font-size: 2.5rem;
     }
 
     .socialBanner {
@@ -165,10 +170,13 @@ footer i {
 /* BREAKPOINT: For desktop view */
 @media only screen and (min-width: 1025px) {
 
-    section, section > *, section h1, section h3 {
+    section, section > *, section h1, section h3, section p, section ul, section li {
         max-width: 1025px;
-    }   
+    }    
 
+    nav {
+        max-width: 100vw;
+    }
     nav a {
         font-size: 1.25rem;
     }
